mutable forEachShape() output